      "joystick hat count" [Ralph]
    * "suspend/resume textbox controls" and "textbox controls are suspended" are
      aliases to "suspend/resume box advance" and "box advance is suspended"
    * "find color" [Ralph]
    * "set selected child", "get selected child" (only for convenience) [Ralph]
    * "override tick milliseconds" and "cancel override tick milliseconds" [James]

  * Changes
    * "Previous attack" base ATK stat renamed to "Last damage by attacker"
    * "Caption" menu item type renamed to "Label", the "Unselectable" subtype
      of Labels renamed to "Disabled", and the "Close menu if selected" bit
      renamed to "Close menu when activated"
    * In-battle instant-run debug key moved from Ctrl-F4 to Ctrl-F5
    * "suspend box advance" now suspends choicebox selection controls too
    * Sorting inventory "by whether usable" considers battle uses too [Ralph]
    * Shops auto-quit when there's nothing left to buy, as they used to [Ralph]
    * Sprite slices can no longer be resized in the slice editor (except by
      setting to Fill Parent -- not recommended) [Ralph]
    * Camera is now focused by default on hero walkabout container instead of
      sprite (see "Camera following a hero/NPC centers on" setting) to fix
      glitches when using camera script commands with large walkabouts [Ralph]

  * Bugfixes
    * Fix a major memory leak while recording .gifs [Ralph]
    * Couldn't copy-paste text containing characters above ASCII 127 [Ralph]
    * Panel slices set to clip had broken child clipping and positioning
      when inside another clipping slice or over the screen edge [Ralph]
    * In the textbox editor, pressing Ctrl+Left/Right to link to another box
      appeared to work but actually the "After" tag condition may not have
      gotten set to "Always", although it appeared it was. If you have any
      secretly-wrong textbox chains in your game you will be warned when you